--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 body {
-    background-color: #cacaca;
-    /* #e8f0fe;*/
+    background-color: #e8f0fe;
     color: #089;
     font-family: cursive
 }
