--- a/src/styles.css
+++ b/src/styles.css
@@ -5,12 +5,17 @@ body {
 
 ul {
     padding: 0;
+    margin: 0 20px;
+
 }
 
 #app-container {
     margin: auto;
-    width: 50%;
+    width: 80%;
     padding: 10px;
+    background-color: #fff7ff;
+    border-radius: 20px;
+    margin-top: 20px;
 }
 
 .prompt {
@@ -27,11 +32,16 @@ ul {
 .task {
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 2fr 2fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 2fr 2fr;
     gap: 5px;
     align-items: end;
     padding: 15px 20px;
     background-color: #ede8e8;
     margin: 10px 0;
     border-radius: 6px;
+}
+
+.actions {
+    display: flex;
+    justify-content: end;
 }
