--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body {
 ul {
     padding: 0;
     margin: 0 20px;
-
+    list-style-type: none;
 }
 
 #app-container {
@@ -30,18 +30,8 @@ ul {
 }
 
 .task {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 2fr 2fr 2fr;
-    gap: 5px;
-    align-items: end;
     padding: 15px 20px;
     background-color: #ede8e8;
     margin: 10px 0;
     border-radius: 6px;
-}
-
-.actions {
-    display: flex;
-    justify-content: end;
 }
